--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,7 @@ spring.servlet.multipart.max-request-size=100MB
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=C:\\Users\\FedosPopados\\Desktop\\youmotion\\target\\classes\\uploads
+upload.path=C:\\Users\\FedosPopados\\Desktop\\yourmotion\\target\\classes\\uploads
 
-logging:
-level:
-sql: debug
-org.hibernate.orm.jdbc.bind: trace
+logging.level.sql=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
