--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=youmotion
 spring.datasource.url=jdbc:mysql://localhost:3306/videomotiondb
 spring.datasource.username=root
-spring.datasource.password=57425742
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
